--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -9,6 +9,11 @@
             <div id="patchnotes_title">NOTES DE PATCH 2.4.0</div>
             <div id="patchnotes_postdata">INFINITY_54 - <strong>16/02/2024</strong></div>
             <div id="patchnotes_content">
+                <p><i class="patchnotes_quotestart"></i> Depuis la sortie de la version 2.4.0, quelques corrections supplémentaires ont été apportées au fil du temps. <i class="patchnotes_quoteend"></i></p>
+                <ul>
+                    <li>05/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-27303)</li>
+                </ul>
+                <br />
                 <p><i class="patchnotes_quotestart"></i> En prévision de nouveaux tournois Ultimate Bravery, l'outil a été mis à jour pour refléter les changements de la saison 14. Quelques autres corrections ont également été apportées. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2023-26159)</li>
