--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -6,24 +6,12 @@
         </div>
 
         <div id="patchnotes">
-            <div id="patchnotes_title">NOTES DE PATCH 2.4.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>16/02/2024</strong></div>
+            <div id="patchnotes_title">NOTES DE PATCH 2.5.0</div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD</strong></div>
             <div id="patchnotes_content">
-                <p><i class="patchnotes_quotestart"></i> Depuis la sortie de la version 2.4.0, quelques corrections supplémentaires ont été apportées au fil du temps. <i class="patchnotes_quoteend"></i></p>
+                <p><i class="patchnotes_quotestart"></i> Avec la version 2.5.0, et le second segment de la saison 2024, de nouvelles modifications ont eu lieu pour se conformer aux changements effectués au jeu. <i class="patchnotes_quoteend"></i></p>
                 <ul>
-                    <li>18/04/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
-                    <li>30/03/2023 : Modification du lien vers les ressources de LoL utilisées dans le programme</li>
-                    <li>26/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-29180)</li>
-                    <li>19/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-28849)</li>
-                    <li>05/03/2023 : Correction d'une faille de sécurité détectée dans l'application (CVE-2024-27303)</li>
-                </ul>
-                <br />
-                <p><i class="patchnotes_quotestart"></i> En prévision de nouveaux tournois Ultimate Bravery, l'outil a été mis à jour pour refléter les changements de la saison 14. Quelques autres corrections ont également été apportées. <i class="patchnotes_quoteend"></i></p>
-                <ul>
-                    <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2023-26159)</li>
-                    <li>Correction d'un problème empêchant le chargement d'une des polices de l'application (Spiegel), utilisée pour la plupart des textes</li>
-                    <li>Refonte de la génération de stuff pour prendre en compte la disparition des objets mythiques</li>
-                    <li>Refonte de la génération de runes pour prendre en compte les runes statistiques ajoutées et supprimées</li>
+                    <li>Correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
                 </ul>
             </div>
         </div>
