Correction d'une vulnérabilité (CVE-2024-37890)

--- a/src/templates/pages/homepage.html.twig
+++ b/src/templates/pages/homepage.html.twig
@@ -7,8 +7,12 @@
 
         <div id="patchnotes">
             <div id="patchnotes_title">NOTES DE PATCH 2.5.0</div>
-            <div id="patchnotes_postdata">INFINITY_54 - <strong>TBD</strong></div>
+            <div id="patchnotes_postdata">INFINITY_54 - <strong>19/05/2024</strong></div>
             <div id="patchnotes_content">
+                <p><i class="patchnotes_quotestart"></i> Depuis la sortie de la version 2.5.0, quelques corrections ont été apportées au programme. <i class="patchnotes_quoteend"></i></p>
+                <ul>
+                    <li>29/06/2024 : Correction d'une vulnérabilité dans la dépendance <em>ws</em></li>
+                </ul>
                 <p><i class="patchnotes_quotestart"></i> Avec la version 2.5.0, et le second segment de la saison 2024, de nouvelles corrections et modifications ont eu lieu pour se conformer aux changements effectués au jeu. <i class="patchnotes_quoteend"></i></p>
                 <ul>
                     <li>Finalisation de la correction d'une faille de sécurité détectée dans l'application (CVE-2021-23337)</li>
